--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 .hero-section .hero-content .scroll-bottom, .feature-section .single-feature .icon, .box-style .icon, .footer .widget-wrapper .footer-widget .socials li a {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,7 +20,7 @@ html {
 }
 
 body {
-  font-family: Arimo;
+  font-family: poppins;
   font-weight: normal;
   font-style: normal;
   color: #5B657E;
@@ -83,7 +84,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arimo;
+  font-family: poppins;
   font-weight: 700;
   margin: 0px;
   color: #162447;
