--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2169,3 +2169,18 @@ p {
 .pb-225 {
   padding-bottom: 225px;
 }
+
+
+/*====================
+  popup
+=================*/
+#popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid black;
+}
