--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2174,7 +2174,7 @@ p {
 /*====================
   popup
 =================*/
-#popup {
+.popup {
   display: none;
   position: fixed;
   top: 50%;
@@ -2183,4 +2183,39 @@ p {
   background-color: white;
   padding: 20px;
   border: 1px solid black;
+}
+.popup-a{
+    display: block;
+    width: 150px;
+    position: relative;
+    margin: 10px auto;
+    text-align: center;
+    background-color: #0f72e5;
+		border-radius: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 8px 0;
+}
+.popup-close{
+    display: block;
+    margin:  0 0 20px auto;
+    background-color: transparent;
+    font-size: 30px;
+    color: #ffffff;
+		background: #03549a;
+		border-radius: 100%;
+		width: 40px;
+		height: 40px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.popup-h2{
+	margin-top: -20px;
+}
+.popup-p{
+    font-size: 14px;
+    text-align: justify;
+    margin: 20px 0;
+    line-height: 25px;
 }
