--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2195,6 +2195,7 @@ p {
     color: #ffffff;
     text-decoration: none;
     padding: 8px 0;
+    cursor: pointer;
 }
 .popup-close{
     display: block;
