--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2174,30 +2174,32 @@ p {
 /*====================
   popup
 =================*/
-.popup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  border: 1px solid black;
+.popup{
+    background-color: #ffffff;
+    width: 420px;
+    padding: 30px 40px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: "Poppins",sans-serif;
+    display: none; 
+    text-align: center;
 }
-.popup-a{
+.link-popup{
     display: block;
-    width: 150px;
+    width:auto;
     position: relative;
     margin: 10px auto;
     text-align: center;
     background-color: #0f72e5;
-		border-radius: 20px;
+	border-radius: 25px;
     color: #ffffff;
     text-decoration: none;
     padding: 8px 0;
-    cursor: pointer;
 }
-.popup-close{
+.butt-popup{
     display: block;
     margin:  0 0 20px auto;
     background-color: transparent;
@@ -2210,13 +2212,4 @@ p {
     border: none;
     outline: none;
     cursor: pointer;
-}
-.popup-h2{
-	margin-top: -20px;
-}
-.popup-p{
-    font-size: 14px;
-    text-align: justify;
-    margin: 20px 0;
-    line-height: 25px;
 }
