--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2174,7 +2174,7 @@ p {
 /*====================
   popup
 =================*/
-.popup{
+#popup{
     background-color: #ffffff;
     width: 420px;
     padding: 30px 40px;
@@ -2186,30 +2186,4 @@ p {
     font-family: "Poppins",sans-serif;
     display: none; 
     text-align: center;
-}
-.link-popup{
-    display: block;
-    width:auto;
-    position: relative;
-    margin: 10px auto;
-    text-align: center;
-    background-color: #0f72e5;
-	border-radius: 25px;
-    color: #ffffff;
-    text-decoration: none;
-    padding: 8px 0;
-}
-.butt-popup{
-    display: block;
-    margin:  0 0 20px auto;
-    background-color: transparent;
-    font-size: 30px;
-    color: #ffffff;
-		background: #03549a;
-		border-radius: 100%;
-		width: 40px;
-		height: 40px;
-    border: none;
-    outline: none;
-    cursor: pointer;
 }
